# test_for_79880

./: .gitignore  Cargo.toml  README.md  Xargo.toml  build.sh  strip.sh  upload.sh  upx.sh
.cargo/: config
src/: config.rs  main.rs  udp.rs  ws.rs
