[package]
name = "tgobs"
version = "0.1.0"
authors = ["fourleaf <gundamwing.wei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "0.3", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.5", features = ["full"] }
tokio-tungstenite = "0.12"
tokio-tcp = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [target.'cfg(target_os = "macos")'.dependencies]
# pretty_env_logger = "0.4"

[profile.release]
panic = 'abort' 
lto = true 
codegen-units = 1 
opt-level = 'z' # Optimize for size.
